bug: none - fix word wrapping w/ long status messages - fix remove-tag action - fix flag/unflag actions

--- a/ZimbraHtmlExtras/resources/style/nifty.css
+++ b/ZimbraHtmlExtras/resources/style/nifty.css
@@ -80,6 +80,7 @@
 .niftyError { 
 	width: 100%;
 	background: rgb(250, 209, 99);
+	white-space: nowrap;
 }
 
 .rtopNiftyError, .rbottomNiftyError { 
